name:                postgresql-simple-extras
version:             0.1.0.0
synopsis:            Extra libraries for postgresql-simple
description:         Extra libraries for postgresql-simple
homepage:            https://github.com/bhurt/postgresql-simple-extras#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Hurt
maintainer:          bhurt42@gmail.com
copyright:           2017 Brian Hurt
category:            Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.PostgreSQL.Simple.Monoid
                        , Database.PostgreSQL.Simple.Monad
  build-depends:       base >= 4.7 && < 5
                        , postgresql-simple
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bhurt/postgresql-simple-extras
